@@ -702,6 +702,39 @@ class Branch:
             precursor = p
 
 
+    def rename_one(self, from_rel, to_rel):
+        tree = self.working_tree()
+        inv = tree.inventory
+        if not tree.has_filename(from_rel):
+            bailout("can't rename: old working file %r does not exist" % from_rel)
+        if tree.has_filename(to_rel):
+            bailout("can't rename: new working file %r already exists" % to_rel)
+            
+        file_id = inv.path2id(from_rel)
+        if file_id == None:
+            bailout("can't rename: old name %r is not versioned" % from_rel)
+
+        if inv.path2id(to_rel):
+            bailout("can't rename: new name %r is already versioned" % to_rel)
+
+        to_dir, to_tail = os.path.split(to_rel)
+        to_dir_id = inv.path2id(to_dir)
+        if to_dir_id == None and to_dir != '':
+            bailout("can't determine destination directory id for %r" % to_dir)
+
+        mutter("rename_one:")
+        mutter("  file_id    {%s}" % file_id)
+        mutter("  from_rel   %r" % from_rel)
+        mutter("  to_rel     %r" % to_rel)
+        mutter("  to_dir     %r" % to_dir)
+        mutter("  to_dir_id  {%s}" % to_dir_id)
+            
+        inv.rename(file_id, to_dir_id, to_tail)
+        os.rename(self.abspath(from_rel), self.abspath(to_rel))
+
+        self._write_inventory(inv)
+            
+
 
     def rename(self, from_paths, to_name):
         """Rename files.
